--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ head {
 * { color:#fff;
   font-weight: bold;
   font-family: cursive;
-  text-decoration: none;}
+  text-decoration: none;
+overflow-x: hidden;}
 
 button {
   margin-top: 0px;
